<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomNav"
    app:startDestination="@+id/habits" >
    <fragment
        android:id="@+id/habits"
        android:name="com.example.habitstracker.HabitsFragment"
        android:label="@string/navigation_habits"
        tools:layout="@layout/fragment_habits"/>
    <fragment
        android:id="@+id/statistics"
        android:name="com.example.habitstracker.StatisticsFragment"
        android:label="@string/navigation_statistics"
        tools:layout="@layout/fragment_statistics"/>
    <fragment
        android:id="@+id/achievements"
        android:name="com.example.habitstracker.AchievementsFragment"
        android:label="@string/navigation_achievements"
        tools:layout="@layout/fragment_achievements"/>
</navigation>